# drasi-platform

./: _typos.toml  readme.md
.githooks/: pre-commit
.github/workflows/: build-test.yml  cargo-audit.yml  devcontainer-test.yml  devskim.yml  drasi-issue-researcher.lock.yml  drasi-issue-researcher.md  image-validation.yml  lint.yml  pr-all-reviewers.yml  pr-assignment-check.yml  pr-correctness-reviewer.lock.yml  pr-correctness-reviewer.md  pr-design-reviewer.lock.yml  pr-design-reviewer.md  pr-docs-reviewer.lock.yml  pr-docs-reviewer.md  pr-prior-art-reviewer.lock.yml  (+8 more)
docs/: README.md
e2e-tests/: package-lock.json  package.json
infrastructure/: Cargo.toml
infrastructure/comms-redis/writer/: Cargo.toml
infrastructure/comms-redis/writer/src/: lib.rs  writer.rs
query-container/: Cargo.toml
query-container/publish-api/: Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default
query-container/publish-api/src/: main.rs
query-container/query-host/: Cargo.toml  Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default  Makefile
query-container/query-host/src/: api.rs  future_consumer.rs  index_factory.rs  main.rs  query_actor.rs  query_worker.rs  result_publisher.rs  source_client.rs
query-container/query-host/src/change_stream/: publisher.rs  redis_change_stream.rs  tests.rs
query-container/view-svc/: Dockerfile.azure-linux  Dockerfile.debug  Dockerfile.default
query-container/view-svc/src/: api.rs  main.rs  mongo_view_store.rs  view_actor.rs  view_worker.rs
query-container/view-svc/src/change_stream/: mod.rs  redis_change_stream.rs  tests.rs
(+86 files in other folders)
