[package]
name = "drasi-comms-redis-writer"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = "1.0.98"
log = "0.4.27"
redis = { version = "0.29.5", features = ["tokio-comp"] }
drasi-comms-redis-reader = { path = "../reader" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.44.2"
